--- a/views/app.ejs
+++ b/views/app.ejs
@@ -28,6 +28,9 @@
         </header>
         <div id="container">
             <h3>Data Metrics</h3>
+            <input type="date" id="startDate">
+            <input type="date" id="endDate">
+            <input type="submit" onclick="restrictChart(myChart, document.getElementById('startDate').value, document.getElementById('endDate').value)">
             <canvas id="myChart" width="1000" height="500"></canvas>
             <input type="date" id="xinput" onchange="userXInput()">
             <input type="text" id="youtput" readonly>
