--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -18,8 +18,7 @@
         <div id="intro">
             <h1>upload file</h1>
             <p>
-                We use data visualization to help you predict the success of a
-                company based on KPIs.
+                Please Provide a CSV file that has the date (mm/dd/yyyy) in the first column and the KPI to analyze in the second column.
             </p>
             <form action="/upload" method="POST" enctype="multipart/form-data">
                 <input type="file" name="file">
